[grid]: Separate out session map config